<resources>
    <string name="app_name">Django Files</string>
    <string name="version_string">v%s</string>
    <string name="version_code_string">%1$s (%2$s)</string>

    <string name="github_url">https://github.com/django-files/android-client</string>
    <string name="github_link"><![CDATA[<a href="https://github.com/django-files/android-client">%s</a>]]></string>
    <string name="website_url">https://django-files.github.io/</string>
    <string name="website_link"><![CDATA[<a href="https://django-files.github.io/">%s</a>]]></string>

    <string name="setup_host_placeholder">your.django-files.com</string>

    <string name="tst_upload_error">Error Uploading!</string>
    <string name="tst_no_url">URL Not Set!</string>
    <string name="tst_uploading_file">Uploading File…</string>
    <string name="tst_copied_clipboard">Copied to Clipboard</string>

    <string name="upload">Upload</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_text">Upload Text</string>
    <string name="file_list">File List</string>
    <string name="app_settings">App Settings</string>

    <plurals name="upload_multi">
        <item quantity="one">Upload %d File</item>
        <item quantity="other">Upload %d Files</item>
    </plurals>
    <plurals name="files_total">
        <item quantity="one">%1$d File</item>
        <item quantity="other">%1$d Files</item>
    </plurals>
    <plurals name="files_selected_total">
        <item quantity="one">%1$d / %2$d File</item>
        <item quantity="other">%1$d / %2$d Files</item>
    </plurals>

    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="options">Options</string>
    <string name="vanity">Vanity</string>
    <string name="file_name">File Name</string>
    <string name="shorten_url">Shorten URL</string>
    <string name="url_hint">URL to Shorten</string>

    <string name="feedback_message">**%1$s** `v%2$s` API **%3$s**\n```\n%4$s\n```</string>

    <string name="background_opacity">Background Opacity %d</string>

    <string-array name="launcher_entries">
        <item>Home Web View</item>
        <item>Show File List</item>
    </string-array>
    <string-array name="launcher_values">
        <item>home</item>
        <item>files</item>
    </string-array>

    <string-array name="work_interval_entries">
        <item>Disabled</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>4 Hours</item>
        <item>6 Hours</item>
        <item>12 Hours</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>1 Week</item>
    </string-array>
    <string-array name="work_interval_values">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>4320</item>
        <item>10080</item>
    </string-array>

    <string-array name="widget_color_entries">
        <item>White</item>
        <item>Black</item>
        <item>Liberty</item>
    </string-array>
    <string-array name="widget_color_values">
        <item>white</item>
        <item>black</item>
        <item>liberty</item>
    </string-array>
</resources>
