<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/login_hostname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:autofillHints="url"
            android:hint="@string/setup_host_placeholder"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:hint="Username"
            android:inputType="text"
            android:padding="10dp"
            android:drawableEnd="@drawable/fa_circle_user"
            android:drawableTint="?android:attr/textColorTertiary" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:autofillHints="password"
            android:hint="Password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/md_key_24"
            android:drawableTint="?android:attr/textColorTertiary" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:text="Add Server"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:icon="@drawable/fa_arrow_right_to_bracket"
            app:iconGravity="end"
            app:iconPadding="-36dp"
            app:iconSize="24dp" />

        <TextView
            android:id="@+id/github_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/github_link"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawablePadding="12dp"
            app:drawableStartCompat="@drawable/fa_github"
            tools:text="github.com/django-files/android-client" />

    </LinearLayout>
</ScrollView>
