<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/login_hostname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:autofillHints="url"
            android:hint="@string/setup_host_placeholder"
            android:inputType="textUri" />

<!--        <EditText-->
<!--            android:id="@+id/login_username"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:autofillHints="username"-->
<!--            android:hint="@string/username"-->
<!--            android:inputType="text"-->
<!--            android:padding="10dp"-->
<!--            android:drawableEnd="@drawable/fa_user"-->
<!--            android:drawableTint="?android:attr/textColorTertiary" />-->

<!--        <EditText-->
<!--            android:id="@+id/login_password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:padding="10dp"-->
<!--            android:autofillHints="password"-->
<!--            android:hint="@string/password"-->
<!--            android:inputType="textPassword"-->
<!--            android:drawableEnd="@drawable/fa_key"-->
<!--            android:drawableTint="?android:attr/textColorTertiary" />-->

        <Button
            android:id="@+id/add_server_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:text="Save and Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:drawableEnd="@drawable/md_login_24px" />

        <Button
            android:id="@+id/add_server_return"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:text="Save and Return"
            android:textColor="?attr/colorOnPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:drawableEnd="@drawable/md_keyboard_tab_rtl_24px" />

        <Button
            android:id="@+id/go_back"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:text="Go Back"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorPrimaryDark"
            android:drawableEnd="@drawable/md_undo_24px"
            android:drawableTint="?attr/colorPrimary"
            app:backgroundTint="@android:color/transparent"
            app:rippleColor="?attr/colorPrimary"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/github_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/github_link"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawablePadding="12dp"
            tools:text="https://django-files.github.io" />

    </LinearLayout>
</ScrollView>
