<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="HardcodedText">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:labelFor="@+id/feedback_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="end"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:text="Version" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:text="Identifier" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:text="Name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:text="GitHub" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:text="Website" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="0.0.1 (1)" />
            <TextView
                android:id="@+id/app_identifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="org.cssnr.zipline" />
            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/app_name" />
            <TextView
                android:id="@+id/github_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="?attr/colorPrimary"
                android:text="django-files/android-client"
                android:tag="@string/github_url" />
            <TextView
                android:id="@+id/website_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dialog_vertical_margin"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="?attr/colorPrimary"
                android:text="django-files.github.io"
                android:tag="@string/website_url" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
